
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)

PROJECT(printf C)
SET(printf_VERSION_MAJOR 1)
SET(printf_VERSION_MINOR 0)
SET(printf_VERSION_PATCH 0)
SET(printf_VERSION_TWEAK 0)

SET(TMP_PROJECT_DESCRIPTION "Minimal printf implementation for embedded systems with bytebuf support"
        CACHE STRING "Project Description")

SET(CMAKE_INSTALL_PREFIX ${PLATFORM_PACKAGES_PATH})
SET(PUBLIC_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE("ds" REQUIRED)

FILE(GLOB SOURCES *.c)
FILE(GLOB_RECURSE HEADERS *.h)
ADD_PLATFORM_LIBRARY(printf STATIC "ds" ${SOURCES})
INSTALL_PLATFORM_LIBRARY(printf ${HEADERS})
